src/parse/parser/snapshots/geam__parse__parser__tests__accept_pipeline_binop_list_tuple_field_tuple_index.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn transform(user) {\n  user.profile.name\n  user.0\n  #(user, user.profile)\n  [1, 2, 3]\n  1 + 2 * 3\n  \"a\" <> \"b\"\n  user |> sanitize |> display\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 17,
                },
                body_start: Some(
                    24,
                ),
                end_position: 147,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 17,
                        },
                        "transform",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 18,
                            end: 22,
                        },
                        name: (
                            SrcSpan {
                                start: 18,
                                end: 22,
                            },
                            "user",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        FieldAccess {
                            location: SrcSpan {
                                start: 28,
                                end: 45,
                            },
                            label_location: SrcSpan {
                                start: 41,
                                end: 45,
                            },
                            label: "name",
                            container: FieldAccess {
                                location: SrcSpan {
                                    start: 28,
                                    end: 40,
                                },
                                label_location: SrcSpan {
                                    start: 33,
                                    end: 40,
                                },
                                label: "profile",
                                container: Var {
                                    location: SrcSpan {
                                        start: 28,
                                        end: 32,
                                    },
                                    name: "user",
                                },
                            },
                        },
                    ),
                    Expression(
                        TupleIndex {
                            location: SrcSpan {
                                start: 48,
                                end: 54,
                            },
                            index: 0,
                            tuple: Var {
                                location: SrcSpan {
                                    start: 48,
                                    end: 52,
                                },
                                name: "user",
                            },
                        },
                    ),
                    Expression(
                        Tuple {
                            location: SrcSpan {
                                start: 57,
                                end: 78,
                            },
                            elements: [
                                Var {
                                    location: SrcSpan {
                                        start: 59,
                                        end: 63,
                                    },
                                    name: "user",
                                },
                                FieldAccess {
                                    location: SrcSpan {
                                        start: 65,
                                        end: 77,
                                    },
                                    label_location: SrcSpan {
                                        start: 70,
                                        end: 77,
                                    },
                                    label: "profile",
                                    container: Var {
                                        location: SrcSpan {
                                            start: 65,
                                            end: 69,
                                        },
                                        name: "user",
                                    },
                                },
                            ],
                        },
                    ),
                    Expression(
                        List {
                            location: SrcSpan {
                                start: 81,
                                end: 90,
                            },
                            elements: [
                                Int {
                                    location: SrcSpan {
                                        start: 82,
                                        end: 83,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                                Int {
                                    location: SrcSpan {
                                        start: 85,
                                        end: 86,
                                    },
                                    value: "2",
                                    int_value: 2,
                                },
                                Int {
                                    location: SrcSpan {
                                        start: 88,
                                        end: 89,
                                    },
                                    value: "3",
                                    int_value: 3,
                                },
                            ],
                        },
                    ),
                    Expression(
                        BinOp {
                            location: SrcSpan {
                                start: 93,
                                end: 102,
                            },
                            operator: AddInt,
                            operator_start: 95,
                            left: Int {
                                location: SrcSpan {
                                    start: 93,
                                    end: 94,
                                },
                                value: "1",
                                int_value: 1,
                            },
                            right: BinOp {
                                location: SrcSpan {
                                    start: 97,
                                    end: 102,
                                },
                                operator: MultInt,
                                operator_start: 99,
                                left: Int {
                                    location: SrcSpan {
                                        start: 97,
                                        end: 98,
                                    },
                                    value: "2",
                                    int_value: 2,
                                },
                                right: Int {
                                    location: SrcSpan {
                                        start: 101,
                                        end: 102,
                                    },
                                    value: "3",
                                    int_value: 3,
                                },
                            },
                        },
                    ),
                    Expression(
                        BinOp {
                            location: SrcSpan {
                                start: 105,
                                end: 115,
                            },
                            operator: Concatenate,
                            operator_start: 109,
                            left: String {
                                location: SrcSpan {
                                    start: 105,
                                    end: 108,
                                },
                                value: "a",
                            },
                            right: String {
                                location: SrcSpan {
                                    start: 112,
                                    end: 115,
                                },
                                value: "b",
                            },
                        },
                    ),
                    Expression(
                        PipeLine {
                            expressions: [
                                Var {
                                    location: SrcSpan {
                                        start: 118,
                                        end: 122,
                                    },
                                    name: "user",
                                },
                                Var {
                                    location: SrcSpan {
                                        start: 126,
                                        end: 134,
                                    },
                                    name: "sanitize",
                                },
                                Var {
                                    location: SrcSpan {
                                        start: 138,
                                        end: 145,
                                    },
                                    name: "display",
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
