src/parse/parser/snapshots/geam__parse__parser__tests__accept_string_prefix_pattern.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\npub fn greeting(text) {\n  case text {\n    \"Hello, \" <> name -> name\n    \"Hi, \" as prefix <> rest -> rest\n    _ -> text\n  }\n}\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        Function(
            Function {
                location: SrcSpan {
                    start: 5,
                    end: 16,
                },
                body_start: Some(
                    23,
                ),
                end_position: 125,
                name: Some(
                    (
                        SrcSpan {
                            start: 8,
                            end: 16,
                        },
                        "greeting",
                    ),
                ),
                arguments: [
                    Arg {
                        location: SrcSpan {
                            start: 17,
                            end: 21,
                        },
                        name: (
                            SrcSpan {
                                start: 17,
                                end: 21,
                            },
                            "text",
                        ),
                        annotation: None,
                        type_: (),
                    },
                ],
                body: [
                    Expression(
                        Case {
                            location: SrcSpan {
                                start: 27,
                                end: 123,
                            },
                            subjects: [
                                Var {
                                    location: SrcSpan {
                                        start: 32,
                                        end: 36,
                                    },
                                    name: "text",
                                },
                            ],
                            clauses: [
                                Clause {
                                    location: SrcSpan {
                                        start: 43,
                                        end: 68,
                                    },
                                    pattern: [
                                        StringPrefix {
                                            location: SrcSpan {
                                                start: 43,
                                                end: 60,
                                            },
                                            left_location: SrcSpan {
                                                start: 43,
                                                end: 52,
                                            },
                                            left_side_assignment: None,
                                            right_location: SrcSpan {
                                                start: 56,
                                                end: 60,
                                            },
                                            left_side_string: "Hello, ",
                                            right_side_assignment: Variable(
                                                (
                                                    SrcSpan {
                                                        start: 56,
                                                        end: 60,
                                                    },
                                                    "name",
                                                ),
                                            ),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 64,
                                            end: 68,
                                        },
                                        name: "name",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 73,
                                        end: 105,
                                    },
                                    pattern: [
                                        StringPrefix {
                                            location: SrcSpan {
                                                start: 73,
                                                end: 97,
                                            },
                                            left_location: SrcSpan {
                                                start: 73,
                                                end: 89,
                                            },
                                            left_side_assignment: Some(
                                                (
                                                    SrcSpan {
                                                        start: 83,
                                                        end: 89,
                                                    },
                                                    "prefix",
                                                ),
                                            ),
                                            right_location: SrcSpan {
                                                start: 93,
                                                end: 97,
                                            },
                                            left_side_string: "Hi, ",
                                            right_side_assignment: Variable(
                                                (
                                                    SrcSpan {
                                                        start: 93,
                                                        end: 97,
                                                    },
                                                    "rest",
                                                ),
                                            ),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 101,
                                            end: 105,
                                        },
                                        name: "rest",
                                    },
                                },
                                Clause {
                                    location: SrcSpan {
                                        start: 110,
                                        end: 119,
                                    },
                                    pattern: [
                                        Discard {
                                            name: "_",
                                            location: SrcSpan {
                                                start: 110,
                                                end: 111,
                                            },
                                            type_: (),
                                        },
                                    ],
                                    alternative_patterns: [],
                                    guard: None,
                                    then: Var {
                                        location: SrcSpan {
                                            start: 115,
                                            end: 119,
                                        },
                                        name: "text",
                                    },
                                },
                            ],
                        },
                    ),
                ],
                publicity: Public,
                return_annotation: None,
                return_type: (),
            },
        ),
    ],
}
