src/parse/parser/snapshots/geam__parse__parser__tests__accept_type_alias.snap
---
source: src/parse/parser/tests.rs
expression: "parse(r#\"\ntype UserId = Int\ntype Age = Int\n\"#)"
---
Module {
    name: "test/module",
    path: "test/module.gleam",
    documentation: [],
    type_info: (),
    definitions: [
        TypeAlias(
            TypeAlias {
                location: SrcSpan {
                    start: 1,
                    end: 18,
                },
                publicity: Private,
                name: (
                    SrcSpan {
                        start: 6,
                        end: 12,
                    },
                    "UserId",
                ),
                parameters: [],
                alias: Constructor {
                    location: SrcSpan {
                        start: 15,
                        end: 18,
                    },
                    module: None,
                    name: (
                        SrcSpan {
                            start: 15,
                            end: 18,
                        },
                        "Int",
                    ),
                    arguments: [],
                },
                type_: (),
            },
        ),
        TypeAlias(
            TypeAlias {
                location: SrcSpan {
                    start: 19,
                    end: 33,
                },
                publicity: Private,
                name: (
                    SrcSpan {
                        start: 24,
                        end: 27,
                    },
                    "Age",
                ),
                parameters: [],
                alias: Constructor {
                    location: SrcSpan {
                        start: 30,
                        end: 33,
                    },
                    module: None,
                    name: (
                        SrcSpan {
                            start: 30,
                            end: 33,
                        },
                        "Int",
                    ),
                    arguments: [],
                },
                type_: (),
            },
        ),
    ],
}
