src/parse/parser/snapshots/geam__parse__parser__tests__reject_adjacent_expression_statements_without_newline.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  1 2\n}\n\"#)"
---
ParseError {
    error: UnexpectedToken {
        token: Int {
            value: "2",
            int_value: 2,
        },
        expected: [
            "a newline or `}`",
        ],
    },
    location: SrcSpan {
        start: 21,
        end: 22,
    },
}
