src/parse/parser/snapshots/geam__parse__parser__tests__reject_assert.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  assert True\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "assert expressions",
    },
    location: SrcSpan {
        start: 19,
        end: 25,
    },
}
