src/parse/parser/snapshots/geam__parse__parser__tests__reject_bit_array.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  <<1, 2>>\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "bit arrays",
    },
    location: SrcSpan {
        start: 19,
        end: 21,
    },
}
