src/parse/parser/snapshots/geam__parse__parser__tests__reject_bit_array_pattern.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(value) {\n  case value {\n    <<1>> -> True\n  }\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "bit array patterns",
    },
    location: SrcSpan {
        start: 41,
        end: 43,
    },
}
