src/parse/parser/snapshots/geam__parse__parser__tests__reject_const.snap
---
source: src/parse/parser/tests.rs
expression: "reject(\"const answer = 42\")"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "module constants",
    },
    location: SrcSpan {
        start: 0,
        end: 5,
    },
}
